fixes for anchor links on beer page xs view fixed spacing on xs under menu

--- a/CSS/BreweryStyle.css
+++ b/CSS/BreweryStyle.css
@@ -42,7 +42,10 @@ marquee
 }
 .beerImgRow
 {
-	
+	margin-left:auto;
+	margin-right:auto;
+	display:block;
+	margin-top:20px;
 }
 .beerName
 {
@@ -142,7 +145,6 @@ marquee
 .imageBlock
 {
 	margin-left:40px;
-	margin-top:20px;
 	width:100%;
 }
 .leftImg
@@ -352,13 +354,16 @@ marquee
 {
 	padding-top:15px;
 	padding-bottom:15px;
-	margin-bottom:50px;
 	border-top:solid #F1BE0E 3px;
 	border-bottom:solid #F1BE0E 3px;
 	background-color: #361508;
 	text-align:center !important;
 	width: inherit ;
 	z-index:1 !important;
+}
+.xsHeaderWrapper
+{
+	margin-bottom:30px;
 }
 .phoneLink
 {
@@ -368,4 +373,10 @@ marquee
 .phoneLink:hover
 {
 	color:yellow !important;
+}
+.xsAnchorSpacing
+{
+	display:block;
+	height:35px;
+	margin-top:-35px;
 }
